...
                            <segments>
                                <segment title="👨🏻"/>
                                <segment title="👩🏻"/>
                            </segments>
                            <color key="selectedSegmentTintColor" systemColor="systemOrangeColor"/>
                        </segmentedControl>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Логин" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gr6-Jc-xXt">
                            <rect key="frame" x="25" y="741" width="364" height="75"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="75" id="dNo-KE-uS3"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="24"/>
                            <textInputTraits key="textInputTraits"/>
...
                            <rect key="frame" x="25" y="94" width="364" height="25"/>
                            <color key="tintColor" systemColor="systemOrangeColor"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="25" id="b7w-7q-EjE"/>
                            </constraints>
                        </imageView>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Войти в магазин" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Imt-sk-CW0">
                            <rect key="frame" x="25" y="144" width="364" height="572"/>
                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
                            <nil key="textColor"/>
                            <nil key="highlightedColor"/>
                        </label>
                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="jareksedy" borderStyle="roundedRect" placeholder="Логин" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7gb-fd-LSd">
...
                            <color key="backgroundColor" systemColor="systemOrangeColor"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="75" id="nWL-w4-tYM"/>
                            </constraints>
                            <fontDescription key="fontDescription" type="system" weight="light" pointSize="24"/>
                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                            <state key="normal" title="Войти">
                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            </state>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                    <integer key="value" value="6"/>
                                </userDefinedRuntimeAttribute>
...
                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                            <constraints>
                                <constraint firstItem="Z7n-5X-Fdu" firstAttribute="centerY" secondItem="ZLb-vT-g0x" secondAttribute="centerY" id="RK9-na-izU"/>
                                <constraint firstItem="Z7n-5X-Fdu" firstAttribute="centerX" secondItem="ZLb-vT-g0x" secondAttribute="centerX" id="jTT-E6-wGK"/>
                            </constraints>
                        </view>
                        <barButtonItem key="rightBarButtonItem" title="Cart" id="cyW-aX-iD9">
                            <imageReference key="image" image="cart" catalog="system" symbolScale="large"/>
                            <color key="tintColor" systemColor="systemOrangeColor"/>
                            <connections>
                                <segue destination="jru-YW-fKW" kind="show" id="5dl-wO-mys"/>
                            </connections>
                        </barButtonItem>
...
                            <constraints>
                                <constraint firstAttribute="height" constant="75" id="Zfp-8O-Rnc"/>
                            </constraints>
                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="-5" maxY="0.0"/>
                            <inset key="imageEdgeInsets" minX="-25" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                            <state key="normal" title="В корзину">
                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <imageReference key="image" image="cart.fill.badge.plus" catalog="system" symbolScale="small"/>
                            </state>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                    <integer key="value" value="6"/>
...
                                            <rect key="frame" x="25" y="104.5" width="364" height="77.5"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <color key="backgroundColor" systemColor="systemOrangeColor"/>
                                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            <inset key="titleEdgeInsets" minX="0.0" minY="0.0" maxX="-5" maxY="0.0"/>
                                            <inset key="imageEdgeInsets" minX="-25" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                            <state key="normal" title="Оформить покупку">
                                                <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <imageReference key="image" image="creditcard" catalog="system" symbolScale="small"/>
                                            </state>
                                            <userDefinedRuntimeAttributes>
                                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                    <integer key="value" value="6"/>
...
